Bug 1729608 - Hide the edit button if the contact is in a read-only directory. r=aleca This really is a simple change, but it managed to break everything it's possible to break in a test.
Differential Revision: https://phabricator.services.mozilla.com/D147239

--HG--
extra : rebase_source : 2c74708842fbb7e875a85482431bf7a51e20267b
extra : histedit_source : de3585ed0f86547e3038a834fc22d808c28dcc08

--- a/mail/themes/shared/mail/aboutAddressBook.css
+++ b/mail/themes/shared/mail/aboutAddressBook.css
@@ -638,7 +638,7 @@ body.is-editing #detailsPane #photoOverlay {
   box-shadow: var(--address-book-blocks-box-shadow);
 }
 
-.button-block {
+.button-block:not([hidden]) {
   display: flex;
   justify-content: space-between;
 }
